<resources>
    <string name="app_name">A+</string>
    <string name="buttonLogin">Prijava</string>
    <string name="textPrijava">Prijava</string>
    <string name="hintGeslo">Geslo</string>
    <string name="hintUporabniskoIme">Uporabniško ime</string>
    <string name="textViewUstvariNovRacun">Ustvari nov račun</string>
    <string name="kontaktirajte_nas">Kontaktirajte nas</string>
    <string name="textviewNaslov">Naslov:</string>
    <string name="textViewTelefon">Telefon:</string>
    <string name="textViewEmail">E-mail:</string>
    <string name="pot_na_lavo_22_celje">Pot na Lavo 22, Celje</string>
    <string name="_03_428_58_00_centrala">(03) 428 58 00 – centrala</string>
    <string name="info_sc_celje_si">info@sc-celje.si</string>
    <string name="pozdravljen">Pozdravljen,</string>
    <string name="ime_in_prrimek">IME IN PRRIMEK</string>
    <string name="e_po_tni_naslov">E-POŠTNI NASLOV</string>
    <string name="uporabnisko_ime">UPORABNIŠKO IME</string>
    <string name="zaradi_varnosti_ga_ne_prikazujemo">Zaradi varnosti ga ne prikazujemo.</string>
    <string name="geslo">GESLO</string>
    <string name="odjava">ODJAVA</string>
    <string name="o_nas">O nas:</string>
    <string name="pozdravljeni_smo_dijaki_4_letnika_srednje_ole_za_kemijom_elektrotehniko_in_ra_unalni_tvo_celje_za_4_izpitno_enoto_storitev_ali_izdelek_z_zagovorom_smo_se_odlo_ila_da_naredimo_osebno_redovalnico_po_imenu_redovalnica_a_nastala_je_z_namenom_izbolj_anja_obstoje_e_redovalnice_eviweb">Pozdravljeni, smo dijaki 4. letnika Srednje šole za kemijo, elektrotehniko in računalništvo Celje. Za 4. izpitno enoto - storitev ali izdelek z zagovorom smo se odločili da naredimo osebno redovalnico po imenu Redovalnica A+. Nastala je z namenom izboljšanja obstoječe redovalnice EviWeb.</string>
    <string name="avtorji">Avtorji:</string>
    <string name="lovro_frece">- Lovro Frece</string>
    <string name="toma_bizjak">- Tomaž Bizjak</string>
    <string name="aleksandar_grobelnik">- Aleksander Grobelnik</string>
    <string name="predmet">PREDMET</string>
    <string name="_1_konferenca">1. KONFERENCA</string>
    <string name="_2_konfernca">2. KONFERNCA</string>
    <string name="kon_na_ocena">KONČNA OCENA</string>
    <string name="ime">Ime</string>
    <string name="za_ustvarjanje_novega_ra_una_izpolnite_spodnji_obrazec">Za ustvarjanje novega računa izpolnite spodnji obrazec.</string>
    <string name="priimek">Priimek</string>
    <string name="uporabni_ko_ime">Uporabniško ime</string>
    <string name="e_po_tni_naslov2">E-poštni naslov</string>
    <string name="ponovno_vnesite_geslo">Ponovno vnesite geslo</string>
    <string name="registracija">Registracija</string>

    <string-array name="my_header_title">
        <item></item>
        <item>PON</item>
        <item>TOR</item>
        <item>SRE</item>
        <item>ČET</item>
        <item>PET</item>
    </string-array>
</resources>
