<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextGeslo"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:hint="@string/hintGeslo"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorLink="#363696"
        android:textCursorDrawable="@color/modra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/editTextGesloAgain"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="396dp"
        android:ems="10"
        android:hint="@string/ponovno_vnesite_geslo"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorLink="#363696"
        android:textCursorDrawable="@color/modra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/editTextEmail2"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="252dp"
        android:ems="10"
        android:hint="@string/e_po_tni_naslov2"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorLink="#363696"
        android:textCursorDrawable="@color/modra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/editTextUporabniskoIme2"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="@string/uporabni_ko_ime"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorLink="#363696"
        android:textCursorDrawable="@color/modra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/editTextPriimek"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/priimek"
        android:inputType="textPersonName"
        android:textColorLink="#363696"
        android:textCursorDrawable="@color/modra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextIme"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ime"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorLink="#363696"
        android:textCursorDrawable="@color/modra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/za_ustvarjanje_novega_ra_una_izpolnite_spodnji_obrazec"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegisterMe"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="#363696"
        android:text="@string/registracija"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGesloAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>