<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <TableLayout
        android:layout_width="413dp"
        android:layout_height="0dp"
        android:id="@+id/tableLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:id="@+id/FirstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="123dp"
                android:layout_height="match_parent"
                android:layout_weight=".0"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/predmet"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/_1_konferenca"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/_2_konfernca"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/kon_na_ocena"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/LastRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:background="@drawable/border"
                android:drawableBottom="@drawable/ic_add_black_24dp"
                android:text="Dodaj nov predmet"
                android:textAlignment="center"
                android:textColor="#BEBEBE" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

